--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="main__result">
             <h2 class="search__result">Search results:</h2>
             <div class="main__year">
-              <h2 id="main__year--label">Release Date: <span id="value"></span></h2>
+              <h2 id="main__year--label">Release Year: <span id="value"></span></h2>
               <input
                 type="range"
                 min="1900"
